# harness-weaver

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  README.md  _k8s_smoke.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-orchestrator-worker-via-sdk-subagents.md  0003-sandbox-lifecycle.md  0004-mcp-transport-in-process.md  0005-judge-design.md
docs/manual/: README.md  cli.md  concepts.md  extending.md  getting-started.md  judge.md  k8s-sandbox.md  troubleshooting.md  web.md
examples/: README.md
examples/output/: analytical-runtime-rating.single-agent-basic.json  analytical-runtime-rating.single-agent-with-sandbox.json  discovery-mood-tense.multi-agent-discovery-explainer.json  discovery-mood-tense.single-agent-basic.json  discovery.single-agent-basic.eval.md
examples/packs/: analytical.json  discovery.json
examples/tasks/: analytical-decade-leaderboard.json  analytical-genre-co-occurrence.json  analytical-genre-quartile.json  analytical-rating-per-runtime.json  analytical-runtime-percentile.json  analytical-runtime-rating.json  discovery-mood-tense.json
scripts/: install-agent-sandbox.sh  kind-down.sh  kind-up.sh  python-sandbox-template.yaml  record-cassette.py  setup_dev.py
src/harness_weaver/: __init__.py  agent_runner.py  catalog.py  cli.py  configurations.py  harness.py  mcp_server.py  sdk_compile.py  sdk_translate.py  task.py  trajectory.py
src/harness_weaver/data/: __init__.py  catalog.csv  ratings.csv
src/harness_weaver/execution/: __init__.py  base.py  k8s.py  local.py
src/harness_weaver/judge/: __init__.py  aggregate.py  classifier.py  llm.py  structural.py
src/harness_weaver/tools/: __init__.py  base.py  catalog_tools.py  registry.py  sandbox.py
src/harness_weaver/web/: __init__.py  app.py  jobs.py
src/harness_weaver/web/static/: form.js  job.js  style.css
src/harness_weaver/web/templates/: base.html  compare_new.html  eval_new.html  index.html  job.html  report.html  runs_new.html  trajectory.html
tests/: _cassette.py  conftest.py  test_catalog.py  test_cli.py  test_configurations.py  test_cost_tracking.py  test_e2e_cassette.py  test_execution.py  test_execution_k8s.py  test_harness_e2e.py  test_judge_aggregate.py  test_judge_classifier.py  test_judge_llm.py  test_judge_structural.py  test_mcp_server.py  test_real_agent_runner.py  test_run_python.py  test_sdk_compile.py  test_sdk_translate.py  test_task.py  test_tools.py  test_trajectory.py  test_web_app.py
tests/cassettes/: discovery-mood-tense.single-agent-basic.pkl
